Update button text

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1>AJAX and Data Fetching</h1>
 
-    <button id="myBtn">Fetch our test.html file</button>
+    <button id="myBtn">Fetch test.html file</button>
   </body>
 </html>
