--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AJAX and Data Fetching</title>
+    <title>AJAX & Data Fetching</title>
     <script defer src="./script.js"></script>
   </head>
   <body>
